# srl-mav-sim

./: .gitmodules  Makefile  README.md
.reuse/: dep5
docker/: Dockerfile  build_docker_image.bash  entry.sh
offboard_py/: package.xml
offboard_py/scripts/: offb_node.py
scripts/: setup_env.bash  test_offboard_mode.py
srl_mav_sim_gazebo/: CMakeLists.txt  package.xml
srl_mav_sim_gazebo/launch/: gazebo_classic.launch  gazebo_ignition.launch
srl_mav_sim_gazebo/scripts/: px4_sitl_ignition.bash
srl_mav_sim_gazebo_classic/: CMakeLists.txt  README.md  package.xml
srl_mav_sim_gazebo_classic/airframes/: 4021_dji_f450_srl  4022_dji_s550_srl
srl_mav_sim_gazebo_classic/launch/: px4-sim.launch
srl_mav_sim_gazebo_ignition/: package.xml
srl_mpc_examples/: CMakeLists.txt  README.md  example_mpc_path.py  gt_adapter_gazebo_classic.py  package.xml
srl_mpc_examples/data/: depot_trajectory_0.tsv
srl_mpc_examples/launch/: example_mpc_path.launch  pose_estimator_gazebo_classic.launch  publish_trajectory.launch
srl_mpc_examples/scripts/: publish_trajectory.py
srl_sim_gazebo_classic/: CMakeLists.txt  README.md  package.xml
srl_sim_gazebo_classic/launch/: sim.launch
srl_sim_gazebo_ignition/: CMakeLists.txt  README.md  package.xml
srl_sim_gazebo_ignition/config/: okvis_rmf_owl.yaml  rmf_owl_mapping.yaml  rmf_owl_mapping_eth.yaml  rmf_owl_mapping_final_map.yaml  rmf_owl_mapping_nn.yaml  rmf_owl_mpc.yaml  rmf_owl_mpc_tuned.yaml  rmf_owl_mpc_tuned2.yaml  rmf_owl_okvis.yaml  rmf_owl_okvis_bk_noise.yaml  rmf_owl_okvis_new_api.yaml  sysid_2.params  sysid_2.params.txt
srl_sim_gazebo_ignition/launch/: digiforest_sim.launch  digiforest_sim_sse_ctrl.launch  gazebo.launch  okvis_rmf_owl.launch  px4_sitl.launch  px4_sitl_ros2.launch.py  rmf_owl_ros_ign_bridges.launch  safety_filter_sim.launch  sim.launch
srl_sim_gazebo_ignition/resources/models/forest/: model.config  model.sdf
srl_sim_gazebo_ignition/resources/models/oak_tree/: model.sdf  model.txt
srl_sim_gazebo_ignition/resources/models/pine_tree/: model.sdf  model.txt
srl_sim_gazebo_ignition/resources/models/pine_tree/meshes/: pine_tree_collision.dae
srl_sim_gazebo_ignition/resources/robots/rmf_owl/: model.config  model.sdf  model_bk_no_noise.sdf  model_bk_noise.sdf
srl_sim_gazebo_ignition/resources/robots/rmf_owl/meshes/: propeller_ccw.dae  propeller_cw.dae  rmf_owl_collision.dae
srl_sim_gazebo_ignition/resources/worlds/: cave.world  cave_alt_start.world  depot.world  depot_alt_start.world  forest.world  forest2.world  rubicon.world  rubicon_alt_start.world
srl_sim_gazebo_ignition/scripts/: autogenerate_sim_sdf.py  depot_stop_fans_patch.sh  px4_sitl_ignition.bash
srl_sim_gazebo_ignition/src/: gazebo.bash  px4_sitl.sh
srl_sim_util/: CMakeLists.txt  package.xml
srl_sim_util/launch/: odometry_ekf.launch  px4_arm_offboard.launch
srl_sim_util/src/: odometry_to_transformstamped.py  px4_arm_offboard.py
