<?xml version="1.0"?>
<!-- SPDX-FileCopyrightText: 2023 Smart Robotics Lab, Imperial College London, Technical University of Munich -->
<!-- SPDX-FileCopyrightText: 2023 Sotiris Papatheodorou -->
<!-- SPDX-License-Identifier: CC0-1.0 -->
<package format="2">
  <name>srl_mav_sim_gazebo_ignition</name>
  <version>0.0.0</version>
  <description>PX4 simulator for SRL MAVs using Ignition Gazebo</description>
  <maintainer email="todo@example.com">Sotiris Papatheodorou</maintainer>
  <author email="todo@example.com">Sotiris Papatheodorou</author>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
