<?xml version="1.0"?>
<!-- SPDX-FileCopyrightText: 2023 Smart Robotics Lab, Imperial College London, Technical University of Munich -->
<!-- SPDX-FileCopyrightText: 2023 Sotiris Papatheodorou -->
<!-- SPDX-License-Identifier: CC0-1.0 -->
<package format="2">
  <name>srl_mpc_examples</name>
  <version>0.0.0</version>
  <description>Examples for using the SRL MPC controllers</description>
  <maintainer email="todo@example.com">Sotiris Papatheodorou</maintainer>
  <author email="todo@example.com">Sotiris Papatheodorou</author>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mav_interface_msgs</depend>
  <depend>rospy</depend>

  <exec_depend>mav_ekf</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>mpc_ros</exec_depend>
</package>
