<?xml version="1.0"?>
<!-- SPDX-FileCopyrightText: 2023 Smart Robotics Lab, Imperial College London, Technical University of Munich -->
<!-- SPDX-FileCopyrightText: 2023 Sotiris Papatheodorou -->
<!-- SPDX-License-Identifier: CC0-1.0 -->
<package format="2">
  <name>srl_sim_gazebo_classic</name>
  <version>0.1.0</version>
  <description>Simulator for SRL MAVs using PX4 and Gazebo Classic</description>
  <author email="s.papatheodorou18@imperial.ac.uk">Sotiris Papatheodorou</author>
  <maintainer email="s.papatheodorou18@imperial.ac.uk">Sotiris Papatheodorou</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>mavlink_sitl_gazebo</exec_depend>
  <exec_depend>px4</exec_depend>
</package>
