<?xml version="1.0"?>
<!-- SPDX-FileCopyrightText: 2023 Smart Robotics Lab, Imperial College London, Technical University of Munich -->
<!-- SPDX-FileCopyrightText: 2023 Sotiris Papatheodorou -->
<!-- SPDX-License-Identifier: CC0-1.0 -->
<package format="2">
  <name>srl_sim_util</name>
  <version>0.1.0</version>
  <description>Utilities for the SRL MAV simulator</description>
  <author email="s.papatheodorou18@imperial.ac.uk">Sotiris Papatheodorou</author>
  <maintainer email="s.papatheodorou18@imperial.ac.uk">Sotiris Papatheodorou</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
</package>
